@@ -36,4 +36,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
 }
